Final code - docstrings added

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"location": "Somewhere", "capacity": 50, "log_file": "logfile.txt"}
+{"location": "Moondalup", "capacity": 100, "log_file": "moondalup.txt"}
